# MemDomA

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: CI.yaml  ci.yml  tests.yaml
.github/workflows.bak/: tests.yml
examples/: run_analysis.py  test_with_sample_data.py
memdoma_package/: __init__.py  analysis.py
memdoma_package/core/: __init__.py  domains.py  lipids.py  proteins.py  trajectory.py
memdoma_package/processing/: __init__.py  parallel.py
memdoma_package/utils/: __init__.py  constants.py  io.py
memdoma_package/visualization/: __init__.py  animation.py  plots.py
test_data/: .test_trajectory.xtc_offsets.npz  README.md
tests/: test_basic.py
